--- a/muk_web_utils/template/assets.xml
+++ b/muk_web_utils/template/assets.xml
@@ -34,6 +34,7 @@
 		<xpath expr="//script[last()]" position="after">
 			<script type="text/javascript" src="/muk_web_utils/static/src/js/libs/jquery.js" />
 			<script type="text/javascript" src="/muk_web_utils/static/src/js/core/utils.js" />
+			<script type="text/javascript" src="/muk_web_utils/static/src/js/core/async.js" />
 			<script type="text/javascript" src="/muk_web_utils/static/src/js/core/files.js" />
 			<script type="text/javascript" src="/muk_web_utils/static/src/js/core/dropzone.js" />
 			<script type="text/javascript" src="/muk_web_utils/static/src/js/core/dialog.js" />
