--- a/muk_web_utils/template/assets.xml
+++ b/muk_web_utils/template/assets.xml
@@ -18,8 +18,16 @@
 -->
 
 <odoo>
-	
+
 	<template id="assets_backend" name="Backend Assets" inherit_id="web.assets_backend">
+		<xpath expr="//link[last()]" position="after">
+			<link rel="stylesheet" type="text/css" href="/muk_web_utils/static/libs/simplebar/simplebar.css" />
+		</xpath>
+		<xpath expr="//script[last()]" position="after">
+			<script type="text/javascript" src="/muk_web_utils/static/libs/simplebar/simplebar.js" />
+			<script type="text/javascript" src="/muk_web_utils/static/src/js/libs/jquery.js" />
+			<script type="text/javascript" src="/muk_web_utils/static/src/js/libs/scrollbar.js" />
+		</xpath>
 		<xpath expr="//link[last()]" position="after">
 			<link rel="stylesheet" type="text/scss" href="/muk_web_utils/static/src/scss/variables.scss" />
 			<link rel="stylesheet" type="text/scss" href="/muk_web_utils/static/src/scss/switch.scss" />
@@ -32,7 +40,6 @@
 			<link rel="stylesheet" type="text/scss" href="/muk_web_utils/static/src/scss/notification.scss" />
 		</xpath>
 		<xpath expr="//script[last()]" position="after">
-			<script type="text/javascript" src="/muk_web_utils/static/src/js/libs/jquery.js" />
 			<script type="text/javascript" src="/muk_web_utils/static/src/js/core/utils.js" />
 			<script type="text/javascript" src="/muk_web_utils/static/src/js/core/async.js" />
 			<script type="text/javascript" src="/muk_web_utils/static/src/js/core/files.js" />
