--- a/muk_web_theme/static/src/scss/navbar.scss
+++ b/muk_web_theme/static/src/scss/navbar.scss
@@ -49,6 +49,9 @@
 				@include mk-full-screen-sections();
 			}
 		}
+		.o_user_menu img {
+			margin-bottom: 3px;
+		}
 		.o_menu_brand, .o_menu_sections, .oe_topbar_name {
 		    display: none;
 		}
@@ -100,7 +103,7 @@
 		            min-width: auto;
 				    box-shadow: none;
 				    background: none;
-				    position: relative;
+				    position: initial;
 		        }
 			    @for $index from 1 through 5 {
 	                .o_menu_entry_lvl_#{$index} {
