publish muk_web_theme - 12.0

--- a/muk_web_theme/static/src/scss/form_view.scss
+++ b/muk_web_theme/static/src/scss/form_view.scss
@@ -136,7 +136,7 @@
                 flex: 1 1 auto;
                 overflow: auto;
             }
-            .o_chatter {
+            > .o_chatter {
                 border-left: 1px solid gray('400');
 			    min-width: $mk-chatter-min-width;
 			    max-width: $mk-chatter-max-width;
