--- a/muk_web_preview/static/src/scss/content.scss
+++ b/muk_web_preview/static/src/scss/content.scss
@@ -18,6 +18,7 @@
 **********************************************************************************/
 
 .mk_preview_wrapper {
+	overflow: auto;
 	width: 100%;
     height: 100%;
 }
