--- a/muk_web_preview/views/res_config_settings_view.xml
+++ b/muk_web_preview/views/res_config_settings_view.xml
@@ -150,12 +150,12 @@
 					</div>
 					<div class="col-12 col-lg-6 o_setting_box">
 						<div class="o_setting_left_pane">
-							<field name="module_muk_web_preview_rtf" />
+							<field name="module_muk_web_preview_cad" />
 						</div>
 						<div class="o_setting_right_pane">
-							<label for="module_muk_web_preview_rtf" />
+							<label for="module_muk_web_preview_cad" />
 							<div class="text-muted">
-								Extendes the Preview Dialog to support RTF files
+								Extendes the Preview Dialog to support CAD files
 							</div>
 						</div>
 					</div>
