--- a/muk_web_preview_audio/template/assets.xml
+++ b/muk_web_preview_audio/template/assets.xml
@@ -19,12 +19,11 @@
 
 <odoo>
 	<template id="assets_backend" inherit_id="web.assets_backend">
-	     <xpath expr="//link[last()]" position="after">
-			<link rel="stylesheet" href="/muk_web_preview_audio/static/src/less/preview_content.less" />
+	    <xpath expr="//link[last()]" position="after">
+			<link rel="stylesheet" href="/muk_web_preview_audio/static/src/scss/audio.scss" />
 		</xpath>
 		<xpath expr="//script[last()]" position="after">
-			<script type="text/javascript" src="/muk_web_preview_audio/static/src/js/preview_handler.js"/>
-	        <script type="text/javascript" src="/muk_web_preview_audio/static/src/js/preview_generator.js"/>
+			<script type="text/javascript" src="/muk_web_preview_audio/static/src/js/audio.js"/>
 		</xpath>
 	</template>
 </odoo>
