--- a/muk_web_theme/static/src/scss/colors.scss
+++ b/muk_web_theme/static/src/scss/colors.scss
@@ -24,6 +24,9 @@
 $o-brand-odoo: #243742;
 $o-brand-primary: #5D8DA8;
 
+$mk-apps-color: #f8f9fa;
+
+$mk-appbar-color: #dee2e6;
 $mk-appbar-background: #000000;
 
 $mk-brand-gradient-start: lighten($o-brand-odoo, 10%);
