--- a/muk_web_theme/views/res_config_settings_view.xml
+++ b/muk_web_theme/views/res_config_settings_view.xml
@@ -27,6 +27,44 @@
 	        <div id="business_documents" position="after">
 	            <h2 id="web_theme_title">Backend Theme</h2>
 	            <div class="row mt16 o_settings_container" name="web_theme">
+	            	<div class="col-12 col-lg-6 o_setting_box">
+	                    <div class="o_setting_left_pane">
+	                    </div>
+	                    <div class="o_setting_right_pane">
+	                        <span class="o_form_label">Default Preferences</span>
+                            <div class="text-muted">
+                                Set the default theme preferences
+                            </div>
+                            <div class="content-group">
+                                <div class="mt16 row">
+                                	<label for="theme_default_sidebar_preference" string="Sidebar" class="col-3 o_light_label"/>
+                                    <field name="theme_default_sidebar_preference" class="col-5"/>
+                                    <div class="w-100"></div>
+                                	<label for="theme_default_chatter_preference" string="Chatter" class="col-3 o_light_label"/>
+                                    <field name="theme_default_chatter_preference" class="col-5"/>
+                                </div>
+                            </div>
+	                    </div>
+	                </div>
+	                <div class="col-12 col-lg-6 o_setting_box">
+	                    <div class="o_setting_left_pane">
+	                    </div>
+	                    <div class="o_setting_right_pane">
+	                        <span class="o_form_label">Theme Colors</span>
+                            <div class="text-muted">
+                                Set the main theme colors
+                            </div>
+                            <div class="content-group">
+                                <div class="mt16 row">
+                                	<label for="theme_color_brand" string="Brand" class="col-3 o_light_label"/>
+                                    <field name="theme_color_brand" widget="color" class="oe_inline"/>
+                                    <div class="w-100"></div>
+                                	<label for="theme_color_primary" string="Primary" class="col-3 o_light_label"/>
+                                    <field name="theme_color_primary" widget="color" class="oe_inline"/>
+                                </div>
+                            </div>
+	                    </div>
+	                </div>
 	                <div class="col-12 col-lg-6 o_setting_box">
 	                    <div class="o_setting_left_pane">
 	                    </div>
@@ -47,20 +85,20 @@
 	                    <div class="o_setting_left_pane">
 	                    </div>
 	                    <div class="o_setting_right_pane">
-	                        <span class="o_form_label">Theme Colors</span>
+	                        <span class="o_form_label">Menu Colors</span>
                             <div class="text-muted">
-                                Set the main theme colors
+                                Set the main menu colors
                             </div>
                             <div class="content-group">
                                 <div class="mt16 row">
-                                	<label for="theme_color_brand" string="Brand" class="col-lg-3 o_light_label"/>
-                                    <field name="theme_color_brand" widget="color" class="oe_inline"/>
+                                	<label for="theme_color_menu" string="Menu" class="col-3 o_light_label"/>
+                                    <field name="theme_color_menu" widget="color" class="oe_inline"/>
                                     <div class="w-100"></div>
-                                	<label for="theme_color_primary" string="Primary" class="col-lg-3 o_light_label"/>
-                                    <field name="theme_color_primary" widget="color" class="oe_inline"/>
+                                	<label for="theme_color_appbar_color" string="AppBar" class="col-3 o_light_label"/>
+                                    <field name="theme_color_appbar_color" widget="color" class="oe_inline"/>
                                     <div class="w-100"></div>
-                                	<label for="theme_color_appbar" string="AppBar" class="col-lg-3 o_light_label"/>
-                                    <field name="theme_color_appbar" widget="color" class="oe_inline"/>
+                                	<label for="theme_color_appbar_background" string="AppBar" class="col-3 o_light_label"/>
+                                    <field name="theme_color_appbar_background" widget="color" class="oe_inline"/>
                                 </div>
                             </div>
 	                    </div>
