--- a/muk_web_branding/static/src/scss/bootstrap_colors.scss
+++ b/muk_web_branding/static/src/scss/bootstrap_colors.scss
@@ -27,3 +27,16 @@ $warning: #ffc107;
 $danger: #dc3545;
 $light: #f8f9fa;
 $dark: #343a40;
+
+$white: #ffffff;
+$black: #000000;
+
+$gray-100: #f8f9fa;
+$gray-200: #e9ecef;
+$gray-300: #dee2e6;
+$gray-400: #ced4da;
+$gray-500: #adb5bd;
+$gray-600: #6c757d;
+$gray-700: #495057;
+$gray-800: #343a40;
+$gray-900: #212529;
