--- a/muk_web_searchpanel/static/src/scss/variables.scss
+++ b/muk_web_searchpanel/static/src/scss/variables.scss
@@ -24,4 +24,4 @@ $o-searchpanel-p-small: $o-horizontal-padding*0.5;
 $o-searchpanel-p-tiny: $o-searchpanel-p-small*0.5;
 
 $o-searchpanel-category-default-color: $o-brand-primary;
-$o-searchpanel-filter-default-color: gray('200');
+$o-searchpanel-filter-default-color: $o-brand-odoo;
