publish muk_web_searchpanel - 12.0

--- a/muk_web_searchpanel/static/src/scss/kanban_view.scss
+++ b/muk_web_searchpanel/static/src/scss/kanban_view.scss
@@ -39,7 +39,7 @@
         background-color: white;
 
         .o_search_panel_category .o_search_panel_section_icon {
-            color: $o-brand-odoo;
+            color: $o-searchpanel-category-default-color;
         }
         .o_search_panel_filter .o_search_panel_section_icon {
             color: $o-searchpanel-filter-default-color;
