--- a/muk_web_theme_mail/template/assets.xml
+++ b/muk_web_theme_mail/template/assets.xml
@@ -41,6 +41,7 @@
             <link rel="stylesheet" type="text/scss" href="/muk_web_theme_mail/static/src/scss/chatter.scss"/>
 		</xpath>
 		<xpath expr="//script[last()]" position="after">
+			<script type="text/javascript" src="/muk_web_theme_mail/static/src/js/keyboard.js" />
             <script type="text/javascript" src="/muk_web_theme_mail/static/src/js/chatter.js" />
 		</xpath>
 	</template>
