publish muk_web_preview_msoffice - 12.0

--- a/muk_web_preview_msoffice/static/src/scss/msoffice.scss
+++ b/muk_web_preview_msoffice/static/src/scss/msoffice.scss
@@ -18,12 +18,13 @@
 **********************************************************************************/
 
 .mk_preview_msoffice {
-	overflow: auto;
-	width: 100%;
+	overflow: hidden;
     height: 100%;
-    iframe {
-    	width: 100%;
-    	height: 100%;
-    }
+	width: 100%;
+}
+
+.mk_preview_msoffice iframe {
+	height: 100%;
+	width: 100%;
 }
 
