publish muk_web_theme - 12.0

--- a/muk_web_theme/static/src/scss/control_panel.scss
+++ b/muk_web_theme/static/src/scss/control_panel.scss
@@ -97,12 +97,15 @@
         .o_cp_switch_buttons.show {
             .dropdown-menu {
                 display: flex;
+                min-width: 0px;
                 flex-direction: row;
                 align-content: center;
                 justify-content: space-around;
                 padding: 0;
                 .btn {
+                    margin: 5px;
                     border: none;
+    				font-size: 1.25rem;
                 }
             }
         }
