publish muk_web_utils - 12.0

--- a/muk_web_utils/template/assets.xml
+++ b/muk_web_utils/template/assets.xml
@@ -58,6 +58,7 @@
 			<script type="text/javascript" src="/muk_web_utils/static/src/js/fields/path.js" />
 			<script type="text/javascript" src="/muk_web_utils/static/src/js/fields/binary.js" />
 			<script type="text/javascript" src="/muk_web_utils/static/src/js/fields/module.js" />
+			<script type="text/javascript" src="/muk_web_utils/static/src/js/fields/domain.js" />
 			<script type="text/javascript" src="/muk_web_utils/static/src/js/views/form/renderer.js" />
 		</xpath>
 	</template>
