publish muk_web_theme - 12.0

--- a/muk_web_theme/static/src/scss/apps.scss
+++ b/muk_web_theme/static/src/scss/apps.scss
@@ -65,6 +65,7 @@
 		    height: auto;
 		    max-width: 7rem;
 		    width: 100%;
+		    flex-basis: 0;
 		}
 		.o-app-name {
 			color: $mk-apps-color; 
