--- a/muk_web_theme/static/src/scss/variables.scss
+++ b/muk_web_theme/static/src/scss/variables.scss
@@ -52,3 +52,9 @@ $mk-sidebar-small-width: 46px;
 $mk-form-min-width: 835px;
 $mk-chatter-min-width: 550px;
 $mk-chatter-max-width: 600px;
+
+//----------------------------------------------------------
+// List View
+//----------------------------------------------------------
+
+$o-list-footer-bg-color: $o-brand-odoo;
