publish muk_web_theme - 12.0

--- a/muk_web_theme/static/src/scss/layout.scss
+++ b/muk_web_theme/static/src/scss/layout.scss
@@ -56,3 +56,13 @@ $mk-brand-gradient: linear-gradient(to right bottom, $mk-brand-gradient-start, $
 .o_content, .modal-content {
     max-width: 100%;
 }
+
+//----------------------------------------------------------
+// Tooltips
+//----------------------------------------------------------
+
+.o_tooltip {
+  &.o_animated {
+    display: none;
+  }
+}
