publish muk_web_theme - 12.0

--- a/muk_web_theme/static/src/scss/form_view.scss
+++ b/muk_web_theme/static/src/scss/form_view.scss
@@ -155,6 +155,10 @@
 	            }
 	        }
 	    }
+    	.oe_title {
+           	width: 100% !important;
+            max-width: 100% !important;
+        }
 	}
 }
 
