--- a/muk_web_theme/static/src/scss/layout.scss
+++ b/muk_web_theme/static/src/scss/layout.scss
@@ -49,6 +49,10 @@ $mk-brand-gradient: linear-gradient(to right bottom, $mk-brand-gradient-start, $
 	}
 }
 
+.oe_wait {
+ 	cursor: progress;
+}
+
 //----------------------------------------------------------
 // Views
 //----------------------------------------------------------
