--- a/muk_web_theme/template/assets.xml
+++ b/muk_web_theme/template/assets.xml
@@ -57,6 +57,7 @@
             <link rel="stylesheet" type="text/scss" href="/muk_web_theme/static/src/scss/settings.scss"/>
 		</xpath>
 		<xpath expr="//script[last()]" position="after">
+			<script type="text/javascript" src="/muk_web_theme/static/src/js/chrome/actions.js" />
 			<script type="text/javascript" src="/muk_web_theme/static/src/js/chrome/menu.js" />
 			<script type="text/javascript" src="/muk_web_theme/static/src/js/chrome/apps.js" />
 			<script type="text/javascript" src="/muk_web_theme/static/src/js/chrome/appsbar.js" />
